# APDTFlow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FINAL_SUMMARY.md  IMPLEMENTATION_STATUS.md  INTEGRATION_VERIFICATION.md  License  MANIFEST.in  Quickstart.ipynb  README.md  RELEASE_CHECKLIST_V0.2.0.md  apply.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  site.yml
apdtflow/: __init__.py  augmentation.py  cli.py  conformal.py  cv_factory.py  data.py  event_time.py  exogenous.py  forecaster.py  inference.py  logger_util.py  preprocessing.py  training.py  utils.py
apdtflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apdtflow/config/: config.yaml
apdtflow/evaluation/: metric_factory.py  regression_evaluator.py
apdtflow/models/: __init__.py  apdtflow.py  base_forecaster.py  continuous_decoder.py  decoder.py  dynamic_dilation_conv.py  dynamics.py  embedding.py  ensemble_forecaster.py  fusion.py  multi_scale_decomposer.py  tcn_forecaster.py  transformer_forecaster.py
apdtflow/preprocessing/: __init__.py  categorical_encoder.py  timeseries.py
dataset_examples/: daily-minimum-temperatures-in-me_clean.csv  get_cmapss.py  get_opsd_germany.py
docs/: METHODOLOGY.md  experiment_results.md  features.md  index.md  models.md
examples/: README.md  backtesting_demo.py  battery_rul_playground.ipynb  battery_rul_playground.py  categorical_features_demo.py  conformal_prediction_demo.py  exogenous_variables_demo.py  migrate_from_prophet.py  predict_at_demo.py  predict_when_demo.py  quickstart_easy_api.py  serve_api.py
experiments/: audit_predict_when.py  battery_eol_demo.py  benchmark_missing_data.py  benchmark_multidomain.py  fd002_robustness_demo.py  make_evidence_summary.py  turbofan_multivariate_demo.py  turbofan_when_demo.py
experiments/notebooks/: Cross_Validation.ipynb  EDA.ipynb  conformal_prediction.ipynb  embedding_integ.ipynb  exogenous_variables.ipynb  mega_experiment.ipynb  preprocessing.ipynb  tutorial.ipynb  visual.ipynb
experiments/prototypes/: odernn_gate.py
experiments/results/: audit_predict_when_monthly-sunspots_above80.json  battery_eol.json  benchmark_missing_data.json  benchmark_multidomain.json  fd002_robustness.json  odernn_gate.json  turbofan_multivariate.json  turbofan_when.json
experiments/scripts/: infer.py  train.py
site/: README.md  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
site/src/components/: Button.astro  CapabilityMatrix.astro  CodeBlock.astro  DemoShowcase.astro  EvidenceTable.astro  FeatureCard.astro  Footer.astro  Hero.astro  HeroVisual.astro  InstallCommand.astro  Nav.astro  PageHeader.astro  StatCallouts.astro  ThreeQuestions.astro  WhenNotToUse.astro
site/src/data/: site.ts  stats.ts
site/src/layouts/: BaseLayout.astro
site/src/pages/: demos.astro  evidence.astro  index.astro  methodology.astro  quickstart.astro
site/src/pages/features/: [slug].astro  index.astro
site/src/styles/: global.css
tests/: test_augmentation.py  test_backtesting.py  test_categorical_encoder.py  test_categorical_integration.py  test_cli.py  test_conformal.py  test_continuous.py  test_cv.py  test_data.py  test_dynamic_dilation_conv.py  test_dynamics.py  test_embedding.py  test_ensemble_forecaster.py  test_evaluation.py  test_exog_conformal_integration.py  test_exogenous.py  test_forecaster_api.py  test_fusion.py  test_inference.py  test_integration.py  test_learning.py  test_logger_util.py  test_metric_factory.py  test_models.py  test_multi_scale_decomposer.py  test_preprocessing.py  test_product_layer.py  test_residual_analysis.py  test_tcn_forecaster.py  test_training.py  test_transformer_forecaster.py  test_utils.py
