[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apdtflow"  # This was missing, causing the error
version = "0.1.9"
description = "APDTFlow: A modular forecasting framework for time series data"
authors = [
    { name = "Yotam Barun", email = "yotambarun93@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchdiffeq",
    "pandas",
    "numpy",
    "matplotlib",
    "tensorboard",
    "pyyaml"
]

[project.urls]
Homepage = "https://github.com/yotambraun/APDTFlow"
Documentation = "https://github.com/yotambraun/APDTFlow"
Source = "https://github.com/yotambraun/APDTFlow"
