[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apdtflow"  # This was missing, causing the error
version = "0.1.12"
description = "APDTFlow: A modular forecasting framework for time series data"
authors = [
    { name = "Yotam Barun", email = "yotambarun93@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchdiffeq",
    "pandas",
    "numpy",
    "matplotlib",
    "tensorboard",
    "pyyaml",
    "scikit-learn",
    "statsmodels"
]
classifiers=[
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Operating System :: OS Independent",
    ]

[project.urls]
Homepage = "https://github.com/yotambraun/APDTFlow"
Documentation = "https://github.com/yotambraun/APDTFlow"
Source = "https://github.com/yotambraun/APDTFlow"
