[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apdtflow"  # This was missing, causing the error
version = "0.2.1"
description = "APDTFlow: A modular forecasting framework for time series data"
authors = [
    { name = "Yotam Barun", email = "yotambarun93@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchdiffeq",
    "pandas",
    "numpy",
    "matplotlib",
    "tensorboard",
    "pyyaml",
    "scikit-learn",
    "statsmodels"
]
keywords=[
    "time-series",
    "forecasting",
    "neural-ode",
    "deep-learning",
    "transformer",
    "tcn",
    "timeseries-analysis",
    "time-series-forecasting",
    "neural-differential-equations",
    "probabilistic-forecasting",
    "uncertainty-quantification",
    "multi-scale-decomposition",
    "pytorch",
    "machine-learning"
]
classifiers=[
        "Development Status :: 4 - Beta",
        "Intended Audience :: Science/Research",
        "Intended Audience :: Developers",
        "Topic :: Scientific/Engineering :: Artificial Intelligence",
        "Topic :: Scientific/Engineering :: Information Analysis",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Operating System :: OS Independent",
        "License :: OSI Approved :: MIT License",
    ]

[project.urls]
Homepage = "https://github.com/yotambraun/APDTFlow"
Documentation = "https://github.com/yotambraun/APDTFlow"
Source = "https://github.com/yotambraun/APDTFlow"

[tool.pytest.ini_options]
addopts = "--cov=apdtflow --cov-report=xml"

[project.scripts]
apdtflow = "apdtflow.cli:main"

